Layout of main page
Added top bar, menu and main content and basic styling

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             .then(null, console.error.bind(console));
     </script>
 
+    <style>
+        body {
+            background-color: darkgrey;
+            margin: auto;
+        }
+    </style>
   </head>
 
   <!-- 3. Display the application -->
