--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
   <head>
     <title>Sprint Planner</title>
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <!-- 1. Load libraries -->
     <script src="node_modules/es6-shim/es6-shim.js"></script>
+    <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
+    
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
